--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.14.0",
     "react": "^19.1.0",
@@ -28,6 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "sass": "^1.90.0",
+    "sass-embedded": "^1.90.0",
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.4"
   },
